--- a/파이썬 환경설정.md
+++ b/파이썬 환경설정.md
@@ -59,9 +59,16 @@ pyenv virtualenv <파이썬 버전> <설정할 가상환경 이름>
 - 가상환경 사용하기
 
 ```bash
-pyenv shell tele
+# 가상환경 사용
+pyenv activate tele
+# 아래명령어도 사용가능하지만 deactivate 불가
+# pyenv shell tele 
+
 #(tele) ochange:~/workspace $ 
 # 커맨드라인 앞에 가상환경 이름이 나와야 합니다.mc
+
+# 가상환경 해제
+pyenv deactivate
 ```
 
 - 모듈 설치
