--- a/파이썬 환경설정.md
+++ b/파이썬 환경설정.md
@@ -59,7 +59,7 @@ pyenv virtualenv <파이썬 버전> <설정할 가상환경 이름>
 - 가상환경 사용하기
 
 ```bash
-# 가상환경 사용
+# 가상환경 활성화
 pyenv activate tele
 # 아래명령어도 사용가능하지만 deactivate 불가
 # pyenv shell tele 
@@ -67,8 +67,14 @@ pyenv activate tele
 #(tele) ochange:~/workspace $ 
 # 커맨드라인 앞에 가상환경 이름이 나와야 합니다.mc
 
-# 가상환경 해제
+# 가상환경 비활성화
 pyenv deactivate
+```
+
+- 가상환경 삭제
+
+```bash
+pyenv uninstall <가상환경이름>
 ```
 
 - 모듈 설치
