--- a/파이썬 환경설정.md
+++ b/파이썬 환경설정.md
@@ -1,31 +1,23 @@
 # 파이썬 환경설정
 
-### pyenv
-
-[pyenv 깃헙](https://github.com/pyenv/pyenv)
+### [pyenv](https://github.com/pyenv/pyenv)
 
 - install
-
 ```bash
 git clone https://github.com/pyenv/pyenv.git ~/.pyenv
 ```
 
-> pyenv 깃헙에서 현재 컴퓨터로 파일 복사
-
 - 환경변수 설정
-
 ```bash
-$ echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile
-$ echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
-#$ echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n  eval "$(pyenv init -)"\nfi' >> ~/.bash_profile
-$ echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
+$ echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
+$ echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+$ echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n  eval "$(pyenv init -)"\nfi' >> ~/.bashrc
 
-source ~/.bash_profile
-# 환경변수 추가후 bash_profile 실행 => 터미널 새로고침
+source ~/.bashrc
+# 환경변수 추가후 bashrc 실행 => 터미널 새로고침
 ```
 
 - python install
-
 ```bash
 pyenv install 3.6.1 # pyenv를 통해서 python 3.6.1을 설치
 pyenv global 3.6.1  # 전역으로 버전 설정
@@ -33,31 +25,26 @@ python -V # 파이썬 버전 확인
 pyenv versions # 사용가능한 파이썬 버전 리스트 출력
 ```
 
-### **pyenv-virtualenv**
+### [pyenv-virtualenv](https://github.com/pyenv/pyenv-virtualenv)
 
 - install
-
 ```bash
-git clone https://github.com/pyenv/pyenv-virtualenv.git $PYENV_ROOT/plugins/pyenv-virtualenv
+$ git clone https://github.com/pyenv/pyenv-virtualenv.git $(pyenv root)/plugins/pyenv-virtualenv
 ```
 
-- setting
-
+- 환경변수 설정
 ```bash
-echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bash_profile
-source ~/.bash_profile
-```
-
-### virtualenv
+echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
+source ~/.bashrc
+​````
 
 - 가상환경 만들기
-
-```bash
+​```bash
 pyenv virtualenv <파이썬 버전> <설정할 가상환경 이름>
+pyenv versions # 사용가능한 버전 확인
 ```
 
 - 가상환경 사용하기
-
 ```bash
 # 가상환경 활성화
 pyenv activate tele
@@ -69,17 +56,10 @@ pyenv activate tele
 
 # 가상환경 비활성화
 pyenv deactivate
-```
 
-- 가상환경 삭제
-
-```bash
+# 가상환경 삭제
 pyenv uninstall <가상환경이름>
+
+# 위의 명령어는 전역에서 사용하기 위한 명령어
+# 폴더별로 환경을 다르게 사용하기 위해 local로 설정!!
 ```
-
-- 모듈 설치
-
-```bash
-pip install bs4 requests
-```
-
