--- a/파이썬 환경설정.md
+++ b/파이썬 환경설정.md
@@ -36,10 +36,10 @@ $ git clone https://github.com/pyenv/pyenv-virtualenv.git $(pyenv root)/plugins/
 ```bash
 echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
 source ~/.bashrc
-​````
+```
 
 - 가상환경 만들기
-​```bash
+```bash
 pyenv virtualenv <파이썬 버전> <설정할 가상환경 이름>
 pyenv versions # 사용가능한 버전 확인
 ```
