파이썬환경설정 fix

--- a/파이썬 환경설정.md
+++ b/파이썬 환경설정.md
@@ -9,9 +9,9 @@ git clone https://github.com/pyenv/pyenv.git ~/.pyenv
 
 - 환경변수 설정
 ```bash
-$ echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
-$ echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
-$ echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n  eval "$(pyenv init -)"\nfi' >> ~/.bashrc
+echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
+echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n  eval "$(pyenv init -)"\nfi' >> ~/.bashrc
 
 source ~/.bashrc
 # 환경변수 추가후 bashrc 실행 => 터미널 새로고침
@@ -29,7 +29,7 @@ pyenv versions # 사용가능한 파이썬 버전 리스트 출력
 
 - install
 ```bash
-$ git clone https://github.com/pyenv/pyenv-virtualenv.git $(pyenv root)/plugins/pyenv-virtualenv
+git clone https://github.com/pyenv/pyenv-virtualenv.git $(pyenv root)/plugins/pyenv-virtualenv
 ```
 
 - 환경변수 설정
