--- a/파이썬 환경설정.md
+++ b/파이썬 환경설정.md
@@ -15,6 +15,7 @@ echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n  eval "$(pyenv init -)"\nf
 
 source ~/.bashrc
 # 환경변수 추가후 bashrc 실행 => 터미널 새로고침
+# exec $SHELL => 이명령어를 실행해도 됨!!
 ```
 
 - python install
